(Maybe) fixed genre list being cut off

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -3,10 +3,10 @@
     top: 0;
     right: 0;
     width: 300px;
-    height: calc(100vh - env(safe-area-inset-bottom));
+    height: calc(100vh - env(safe-area-inset-bottom) - env(safe-area-inset-top));
     background: #1a1a1a;
     color: white;
-    padding: 12px 12px 0;
+    padding: 12px 12px 15px;
     border-left: 1px solid #333;
     display: flex;
     flex-direction: column;
@@ -22,7 +22,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        padding: calc(12px + env(safe-area-inset-top)) 12px  0;
+        padding: calc(12px + env(safe-area-inset-top)) 12px  env(safe-area-inset-bottom);
         transform: translateX(100%); /* hidden by default */
         border-left: none;
     }
